# RGIS

./: .Dockerfile.swp  .gitignore  CMakeLists.txt  Dockerfile  GCPcontainerBuild.sh  install.sh
CMlib/: CMakeLists.txt
CMlib/include/: cm.h
CMlib/src/: cmArgParse.c  cmBuffer.c  cmMath.c  cmMessage.c  cmString.c  cmThreads.c
Container/: startup.sh
Containers/RGIS-Compute/: Dockerfile
Containers/RGIS-Compute-GCP/: Dockerfile
Containers/RGIS-Desktop/: Dockerfile
Containers/RGIS-Desktop-GCP/: Dockerfile
DBlib/: CMakeLists.txt
DBlib/include/: DB.H  DB.hpp  DBif.H  DBif.hpp  DBtf.h
DBlib/python/: CMakeLists.txt  README.md  dblib.i  setup.py  setup_swig.py
DBlib/python/pyDBlib_bak/: dblibPYTHON_wrap.cxx  pyDBlib.py
DBlib/src/: DBByteOrder.C  DBByteOrder.cpp  DBDataset.C  DBDataset.cpp  DBDate.C  DBDate.cpp  DBExpARCGrd.C  DBExpARCGrd.cpp  DBExpARCLine.C  DBExpARCLine.cpp  DBExpARCNet.C  DBExpARCNet.cpp  DBExpARCPnt.C  DBExpARCPnt.cpp  DBExpARCTable.C  DBExpARCTable.cpp  DBFile.C  DBFile.cpp  DBGCont2Net.C  DBGCont2Net.cpp  DBGrid2Grid.C  DBGrid2Grid.cpp  DBGridMisc.C  DBGridMisc.cpp  DBImpARC.C  DBImpARC.cpp  DBImpARCLine.C  DBImpARCLine.cpp  DBImpARCPoint.C  DBImpARCPoint.cpp  DBImpARCPoly.C  DBImpARCPoly.cpp  DBImpASCIINet.C  DBImpASCIINet.cpp  DBImpExpASCII.C  DBImpExpASCII.cpp  DBImpExpDMGrd.C  DBImpExpDMGrd.cpp  DBImpExpNetCDF.C  DBImpExpNetCDF.cpp  (+35 more)
DBlib/swig/: DB30.i  README.md
DBlib/swig/python/: CMakeLists.txt  DB30.py  setup.py.in
Flib/: CMakeLists.txt
Flib/include/: Flib.h
Flib/src/: FData.c  FTableRead.c  Flib.c
MDBlib/src/: MDBvariableDB.c
MFlib/: CMakeLists.txt
MFlib/include/: MF.h
MFlib/src/: MFDataStream.c  MFDate.c  MFDefinition.c  MFDomain.c  MFMapper.c  MFModel.c  MFOptions.c  MFRungeKutta.c  MFSwap.c  MFVariables.c
Messages/: RGIS.history  RGIS.msg
RGlib/: CMakeLists.txt
RGlib/include/: RG.H  RG.hpp
RGlib/src/: RGlibDataStream.C  RGlibDataStream.cpp  RGlibGenFuncs.C  RGlibGenFuncs.cpp  RGlibGrid.C  RGlibGrid.cpp  RGlibNetwork.C  RGlibNetwork.cpp  RGlibPause.C  RGlibPause.cpp  RGlibPoint.C  RGlibPoint.cpp  RGlibTable.C  RGlibTable.cpp
Scripts/: RGISfunctions.sh  fwFunctions22.sh  fwFunctions23.sh  fwFunctions30.sh  pgExportTSV.sh  pgFunctions.sh  rgis.sh  rgis2GPKG.sh  rgis2GeoPackage.sh  rgis2PostGIS.sh  rgis2gpkg.sh  rgisConverters.sh  rgisSync2netcdf.sh  rgisSyncNetCDF.sh  xy-plot.sh
UIlib/: CMakeLists.txt
UIlib/include/: UI.H  UI.hpp
UIlib/src/: UI2DView.C  UI2DView.cpp  UI2DViewAux.C  UI2DViewAux.cpp  UI2DViewDisp.C  UI2DViewDisp.cpp  UIAttribView.C  UIAttribView.cpp  UIAux.C  UIAux.cpp  UIColorSets.C  UIColorSets.cpp  UIDataHeaderF.C  UIDataHeaderF.cpp  UIDataPropF.C  UIDataPropF.cpp  UIDataset.C  UIDataset.cpp  UIDialog.C  UIDialog.cpp  UIDialogForm.C  UIDialogForm.cpp  UIFieldEdit.C  UIFieldEdit.cpp  UIFileSel.C  UIFileSel.cpp  UIGetLine.C  UIGetLine.cpp  UIGetString.C  UIGetString.cpp  UIGlobe.C  UIGlobe.cpp  UIInit.C  UIInit.cpp  UIInqRegion.C  UIInqRegion.cpp  UIInqVector.C  UIInqVector.cpp  UILoop.C  UILoop.cpp  (+24 more)
VDBlib/: CMakeLists.txt
VDBlib/include/: vdb.h
VDBlib/src/: VDBmasterTable.c
WBMstable/: CMakeLists.txt
WBMstable/include/: MD.h
WBMstable/src/: MDAccBalance.c  MDAccumulate.c  MDAux_Accumulate.c  MDAux_MeanDischarge.c  MDAux_MeanRunoff.c  MDAvgNSteps.c  MDBQARTpreprocess.c  MDBaseFlow.c  MDCParams.c  MDCommon_CloudCover.c  MDCommon_GrossRad.c  MDCommon_HumidityRelative.c  MDCommon_HumiditySpecific.c  MDCommon_Precipitation.c  MDCommon_SolarRad.c  MDCommon_WetDays.c  MDCommon_Wind.c  MDCore_BaseFlow.c  MDCore_Evapotranspiration.c  MDCore_PotETlib.c  MDCore_RainInfiltration.c  MDCore_RainIntercept.c  MDCore_RainPotET.c  MDCore_RainPotETHamon.c  MDCore_RainPotETJensen.c  MDCore_RainPotETPMday.c  MDCore_RainPotETPMdn.c  MDCore_RainPotETPsTaylor.c  MDCore_RainPotETPstd.c  MDCore_RainPotETSWGday.c  MDCore_RainPotETSWGdn.c  MDCore_RainPotETTurc.c  MDCore_RainSMoistChg.c  MDCore_RainSurfRunoff.c  MDCore_RainWaterSurplus.c  MDCore_Runoff.c  MDCore_RunoffVolume.c  MDCore_SnowPackChg.c  MDCore_SoilAvailWaterCap.c  MDCore_SoilMoistChg.c  (+97 more)
XResources/bitmaps/: GHAASasrc.xpm
rCommands/: CMakeLists.txt
rCommands/include/: CMDexp.H  CMDexp.hpp
rCommands/src/: CMDds2rgis.C  CMDds2rgis.cpp  CMDdsAggregate.C  CMDdsAggregate.cpp  CMDdsClimatology.cpp  CMDdsDuration.C  CMDdsDuration.cpp  CMDdsSampling.C  CMDdsSampling.cpp  CMDdsStorage.cpp  CMDgetHeader.C  CMDgetHeader.cpp  CMDgrdAppendLayers.C  CMDgrdAppendLayers.cpp  CMDgrdBoxAggr.C  CMDgrdBoxAggr.cpp  CMDgrdCalculate.C  CMDgrdCalculate.cpp  CMDgrdCellStats.C  CMDgrdCellStats.cpp  CMDgrdCreateNetwork.C  CMDgrdCreateNetwork.cpp  CMDgrdCycleMean.C  CMDgrdCycleMean.cpp  CMDgrdDateLayers.C  CMDgrdDateLayers.cpp  CMDgrdDifference.C  CMDgrdDifference.cpp  CMDgrdExtractLayers.C  CMDgrdExtractLayers.cpp  CMDgrdHeatIndex.C  CMDgrdHeatIndex.cpp  CMDgrdImport.C  CMDgrdImport.cpp  CMDgrdMerge.C  CMDgrdMerge.cpp  CMDgrdMinMax.C  CMDgrdMinMax.cpp  CMDgrdNetFilter.C  CMDgrdNetFilter.cpp  (+158 more)
rGIS/: CMakeLists.txt
rGIS/include/: rgis.H  rgis.hpp
rGIS/src/: RGISAnField.C  RGISAnField.cpp  RGISAnGNUXYPlot.C  RGISAnGNUXYPlot.cpp  RGISAnGrid.C  RGISAnGrid.cpp  RGISAnLine.C  RGISAnLine.cpp  RGISAnNetStreams.C  RGISAnNetStreams.cpp  RGISAnNetwork.C  RGISAnNetwork.cpp  RGISAnPoint.C  RGISAnPoint.cpp  RGISAnPoly.C  RGISAnPoly.cpp  RGISAnSampleGrid.C  RGISAnSampleGrid.cpp  RGISAnTable.C  RGISAnTable.cpp  RGISAnalyse.C  RGISAnalyse.cpp  RGISDisplay.C  RGISDisplay.cpp  RGISEdit.C  RGISEdit.cpp  RGISEditGrid.C  RGISEditGrid.cpp  RGISEditLine.C  RGISEditLine.cpp  RGISEditNet.C  RGISEditNet.cpp  RGISEditPoint.C  RGISEditPoint.cpp  RGISEditPoly.C  RGISEditPoly.cpp  RGISFile.C  RGISFile.cpp  RGISMain.C  RGISMain.cpp  (+30 more)
tfCommands/: CMakeLists.txt
tfCommands/src/: FAccumulate.c  FCut.c  FReg.c  FSort.c  FStat.c
threadTest/: CMakeLists.txt
threadTest/src/: threadTest.c
