cmake_minimum_required(VERSION 3.10)
project(RGIS)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS   "${CMAKE_CXX_FLAGS} -std=c++11")

if(${CMAKE_HOST_APPLE})
    set(CMAKE_MACOSX_RPATH "on")
    if(EXISTS "/usr/local/include")
        include_directories(/usr/local/include)
    endif(EXISTS "/usr/local/include")
    if (EXISTS "/usr/local/include/udunits2")
        include_directories(/usr/local/include/udunits2)
    endif (EXISTS "/usr/local/include/udunits2")
    if(EXISTS "/usr/local/lib")
        link_directories(/usr/local/lib)
    endif(EXISTS "/usr/local/lib")
    if(EXISTS "/opt/X11/include")
        include_directories(/opt/X11/include)
    endif(EXISTS "/opt/X11/include")
    if(EXISTS "/opt/X11/lib")
        link_directories(/opt/X11/lib)
    endif(EXISTS "/opt/X11/lib")
endif(${CMAKE_HOST_APPLE})

add_subdirectory(CMlib)
add_subdirectory(DBlib)
add_subdirectory(Flib)
add_subdirectory(MFlib)
add_subdirectory(RGlib)
add_subdirectory(rCommands)
add_subdirectory(rGIS)
add_subdirectory(UIlib)
add_subdirectory(VDBlib)
add_subdirectory(tfCommands)
add_subdirectory(threadTest)
add_subdirectory(WBMstable)

install(DIRECTORY f          DESTINATION ghaas)
install(DIRECTORY Scripts    DESTINATION ghaas)
install(DIRECTORY Messages   DESTINATION ghaas)
install(DIRECTORY html       DESTINATION ghaas)
install(DIRECTORY XResources DESTINATION ghaas)