FILE(GLOB sources src/*.c)
add_library(F10 ${sources})
target_include_directories(F10 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include)
target_link_libraries(F10 LINK_PUBLIC CM10)
install(TARGETS F10 DESTINATION ghaas/lib)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/Flib.h DESTINATION ghaas/include)
